# cell2fate

./: .gitignore  .readthedocs.yaml  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
cell2fate/: AutoAmortisedNormalMessenger.py  Mouse_TFs.txt  _GaussianMixtureTest_model.py  _GaussianMixtureTest_module.py  __init__.py  _cell2fate_DynamicalModel.py  _cell2fate_DynamicalModelTimeAsParam.py  _cell2fate_DynamicalModelTimeAsParam_module.py  _cell2fate_DynamicalModel_FreeModules.py  _cell2fate_DynamicalModel_FreeModules_module.py  _cell2fate_DynamicalModel_ModuleSpecificTime.py  _cell2fate_DynamicalModel_ModuleSpecificTime_NonGaussianTimePrior.py  _cell2fate_DynamicalModel_ModuleSpecificTime_NonGaussianTimePrior_module.py  _cell2fate_DynamicalModel_ModuleSpecificTime_module.py  _cell2fate_DynamicalModel_MultiLineage.py  _cell2fate_DynamicalModel_MultiVariateNormalGuide.py  _cell2fate_DynamicalModel_PreprocessedCounts.py  _cell2fate_DynamicalModel_PreprocessedCounts_module.py  _cell2fate_DynamicalModel_PriorKnowledge.py  _cell2fate_DynamicalModel_PriorKnowledge_Sequential.py  _cell2fate_DynamicalModel_PriorKnowledge_Sequential_module.py  _cell2fate_DynamicalModel_PriorKnowledge_Sequential_module2.py  _cell2fate_DynamicalModel_PriorKnowledge_Sequential_module3.py  _cell2fate_DynamicalModel_PriorKnowledge_module.py  _cell2fate_DynamicalModel_SequentialModules.py  _cell2fate_DynamicalModel_SequentialModules_DcdiDependent.py  _cell2fate_DynamicalModel_SequentialModules_DcdiDependent_module.py  _cell2fate_DynamicalModel_SequentialModules_IdentityDependent.py  (+69 more)
(+48 files in other folders)
