[metadata]
name = cell2fate
version = 0.01a
description = Models for understanding differentiation and cell-fate decisions based on single-cell data.
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache License, Version 2.0
url = https://github.com/AlexanderAivazidis/cell2fate
author = Alexander Aivazidis, Vitalii Kleshchevnikov
author_email = alexander.aivazidis@sanger.ac.uk


[options]
include_package_data = True
packages = find:
install_requires =
    pyro-ppl>=1.8.0
    scvi-tools>=0.15.3
    torch>=1.9.0
    numpy
    pandas
    scanpy
    plotnine
    opencv-python
