[metadata]
name = cell2fate
version = 0.01a
description = Models for understanding differentiation and cell-fate decisions based on single-cell data.
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache License, Version 2.0
url = https://github.com/AlexanderAivazidis/cell2fate
author = Alexander Aivazidis, Vitalii Kleshchevnikov
author_email = alexander.aivazidis@sanger.ac.uk


[options]
include_package_data = True
packages = find:
install_requires =
    pyro-ppl>=1.8.0
    scvi-tools==0.16.1
    anndata==0.8.0
    importlib_metadata==3.10.0
    matplotlib==3.5.2
    numpy>=1.19.2
    pandas==1.4.2
    rich==12.3.0
    scanpy==1.9.1
    scipy==1.8.0
    scvelo==0.2.4
    setuptools
    torch==1.11.0
    gseapy==0.12.1
